[tool.poetry]
name = "dlsandbox"
version = "0.1.0"
description = ""
authors = ["MonadicDavidHuang <mynameistoyoko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.0"
keras = "^2.4.3"
tensorflow = "^2.2.0"
Pillow = "^7.2.0"
pydot = "^1.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
